# avr-serial-defmt

./: Cargo.toml  avr-defmt.x  avr64du32.json  clean.map  output.map  rust-toolchain.toml  upload.sh
.cargo/: config.toml
src/: lib.rs  main.rs
