[profile.dev]
panic = "abort"
lto = true
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[package]
name = "avr-serial-dfmt"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"

critical-section = "1.1"
defmt = "0.3"


[patch.crates-io]
avr-device = {path = "../avr-device"}



[dependencies.avr-device]
#git = "https://github.com/Rahix/avr-device"
path = "../avr-device"
features = ["avr64du32", "rt", "critical-section-impl"]
